--- a/index.html
+++ b/index.html
@@ -716,7 +716,8 @@ About Area
                             </div>
                             <div class="btn-content">
                                 <h6 class="btn-title">Call Us 24/7</h6>
-                                <span class="btn-text"><a href="tel:+917822915539">+91 7822915539</a></span>
+                                <span class="btn-text"><a href="tel:+917822915539" style="text-wrap: nowrap;">+91
+                                        7822915539</a></span>
                             </div>
                         </div>
                     </div>
@@ -885,7 +886,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-1.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">850</span>+</h2>
+                        <h2 class="box-number text-white"><span class="counter-number text-white">50</span>+</h2>
                         <p class="box-text text-white">Projects Completed</p>
                     </div>
                 </div>
@@ -894,7 +895,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-2.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">950</span>+</h2>
+                        <h2 class="box-number text-white"><span class="counter-number text-white">50</span>+</h2>
                         <p class="box-text text-white">Quality Design</p>
                     </div>
                 </div>
@@ -903,7 +904,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-3.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">18</span>k+</h2>
+                        <h2 class="box-number text-white"><span class="counter-number text-white">10</span>k+</h2>
                         <p class="box-text text-white">satisfied Clients</p>
                     </div>
                 </div>
@@ -912,7 +913,7 @@ Counter Area
                         <div class="box-icon">
                             <img src="assets/img/icon/counter-4-4.svg" alt="img">
                         </div>
-                        <h2 class="box-number text-white"><span class="counter-number text-white">2</span>k+</h2>
+                        <h2 class="box-number text-white"><span class="counter-number text-white">5</span>k+</h2>
                         <p class="box-text text-white">happy owners</p>
                     </div>
                 </div>
@@ -981,10 +982,10 @@ Property Area 2
                 <div class="col-xl-4 col-lg-6">
                     <div class="property-card6">
                         <div class="property-card-thumb img-shine">
-                            <img src="assets/img/property/property6-3.png" alt="img">
+                            <img src="assets/img/property/property6-3.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
-                            <h4 class="property-card-title"><a href="service-details.html">Luxory Makeover</a></h4>
+                            <h4 class="property-card-title"><a href="service-details.html">Luxury Makeover</a></h4>
                             <p class="property-card-text">Our post-construction services gives you peace of mind knowing
                                 that we are still here for you even after by graviton construction.</p>
                             <div class="property-btn-wrap">
@@ -1001,7 +1002,7 @@ Property Area 2
                 <div class="col-xl-4 col-lg-6">
                     <div class="property-card6">
                         <div class="property-card-thumb img-shine">
-                            <img src="assets/img/property/property6-4.png" alt="img">
+                            <img src="assets/img/property/property6-4.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
                             <h4 class="property-card-title"><a href="service-details.html">Luxury Floors & Elevated
@@ -1022,7 +1023,7 @@ Property Area 2
                 <div class="col-xl-4 col-lg-6">
                     <div class="property-card6">
                         <div class="property-card-thumb img-shine">
-                            <img src="assets/img/property/property6-5.png" alt="img">
+                            <img src="assets/img/property/property6-5.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
                             <h4 class="property-card-title"><a href="service-details.html">General Contracting</a></h4>
@@ -1042,7 +1043,7 @@ Property Area 2
                 <div class="col-xl-4 col-lg-6">
                     <div class="property-card6">
                         <div class="property-card-thumb img-shine">
-                            <img src="assets/img/property/property6-6.png" alt="img">
+                            <img src="assets/img/property/property6-6.jpg" alt="img">
                         </div>
                         <div class="property-card-details">
                             <h4 class="property-card-title"><a href="service-details.html">Renovate, Repair & Expand</a>
