--- a/index.html
+++ b/index.html
@@ -354,10 +354,12 @@ Hero Area
                 <div class="col-xl-7">
                     <div class="hero-style9">
                         <span class="sub-title4">RESIDENTIAL PROJECTS</span>
-                        <h1 class="hero-title text-white">Building Homes That Define Your Lifestyle</h1>
-                        <p class="hero-text">Our residential projects focus on the creation of premium housing
-                            solutions—meticulously planned and designed to deliver modern architecture, functional
-                            layouts, and a luxurious living experience.</p>
+                        <h1 class="hero-title text-white">Mindscape — Turning Land Into Landmarks</h1>
+                        <p class="hero-text">At Mindscape Constructions, we bring your vision to life with precision,
+                            quality, and dedication. Based in Goa, we undertake all types of construction projects —
+                            from luxury villas and residential complexes to commercial spaces and renovations. With a
+                            commitment to on-time delivery and superior craftsmanship, we transform every project into a
+                            lasting landmark.</p>
                         <div class="btn-wrap">
                             <a href="contact.html" class="th-btn style4 th-btn-icon">Contact Us</a>
                         </div>
@@ -387,13 +389,15 @@ Hero Area
                             <img src="assets/img/feature/2-1.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">Experienced Team</h3>
-                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">Backed by an experienced team
-                                of professionals, we provide expertise and guidance to ensure the optimal selection
-                                and utilization.</p>
+                            <h3 class="box-title">Skilled & Experienced Team</h3>
+                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">
+                                Our team comprises seasoned professionals with years of industry experience, ensuring
+                                expert guidance and reliable solutions for every project.
+                            </p>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-xl-4 col-md-6">
                     <div class="feature-card2">
                         <div class="box-img img-shine">
@@ -401,24 +405,70 @@ Hero Area
                         </div>
                         <div class="media-body">
                             <h3 class="box-title">Modern Equipments</h3>
-                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">Equipped with state-of-the-art
-                                technology and modern machinery, we
-                                streamline production processes to ensure efficiency. This is
-                                evident by our commitment.</p>
+                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">
+                                We use the latest tools and machinery to deliver precise results, improve efficiency,
+                                and maintain the highest quality standards.
+                            </p>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-xl-4 col-md-6">
                     <div class="feature-card2">
                         <div class="box-img img-shine">
                             <img src="assets/img/feature/2-3.jpg" alt="img">
                         </div>
                         <div class="media-body">
-                            <h3 class="box-title">Smart Methods</h3>
-                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">Employing smart methodologies,
-                                we
-                                optimize resource utilization and minimize waste throughout our pro duction
-                                processes.</p>
+                            <h3 class="box-title">Quality Craftsmanship</h3>
+                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">
+                                Every product is crafted with precision, attention to detail, and a commitment to
+                                excellence to ensure long-lasting value.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div class="feature-card2">
+                        <div class="box-img img-shine">
+                            <img src="assets/img/feature/2-4.jpg" alt="img">
+                        </div>
+                        <div class="media-body">
+                            <h3 class="box-title">On-Time Delivery</h3>
+                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">
+                                We follow strict timelines and efficient processes to ensure that every project is
+                                delivered exactly when promised.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div class="feature-card2">
+                        <div class="box-img img-shine">
+                            <img src="assets/img/feature/2-5.jpg" alt="img">
+                        </div>
+                        <div class="media-body">
+                            <h3 class="box-title">Cutting-Edge Technology</h3>
+                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">
+                                We stay ahead of the curve by integrating the latest innovations and technologies to
+                                enhance performance and results.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-4 col-md-6">
+                    <div class="feature-card2">
+                        <div class="box-img img-shine">
+                            <img src="assets/img/feature/2-6.jpg" alt="img">
+                        </div>
+                        <div class="media-body">
+                            <h3 class="box-title">Client-Centric Approach</h3>
+                            <p class="box-text" style="color: rgba(255, 255, 255, 0.7);">
+                                We focus on understanding our clients’ needs and delivering solutions that exceed
+                                expectations every time.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -453,7 +503,7 @@ About Area
                 </div>
                 <div class="col-xl-6">
                     <div class="title-area mb-15">
-                        <span class="sub-title4">About Us Our Company</span>
+                        <span class="sub-title4">About Us</span>
                         <h2 class="sec-title">Building the Future of Residential Living</h2>
                     </div>
                     <p class="sec-text mb-20" style="color: rgba(255, 255, 255, 0.7);">At Mindscape Construction, we
