--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@ Hero Area
                 </div>
                 <div class="col-xl-7">
                     <div class="hero-style9">
-                        <span class="sub-title4">Mindscape Construction</span>
-                        <h1 class="hero-title text-white">Turning Land Into Landmarks</h1>
+                        <span class="sub-title4">Turning Lands Into Landmarks</span>
+                        <h1 class="hero-title text-white">Mindscape Construction</h1>
                         <p class="hero-text">At Mindscape Constructions, we bring your vision to life with precision,
                             quality, and dedication. Based in Goa, we undertake all types of construction projects —
                             from luxury villas and residential complexes to commercial spaces and renovations. With a
@@ -380,8 +380,11 @@ Hero Area
                     <div class="title-area text-center">
                         <!-- <span class="sub-title4">Our Features</span> -->
                         <h2 class="sec-title d-flex align-items-center justify-content-center"
-                            style="color: black; gap: 8px;"><i class="fa fa-medal" style="font-size: 32px;"></i>OUR
-                            EXPERTISE<i class="fa fa-medal" style="font-size: 32px;"></i></h2>
+                            style="color: black; gap: 8px;">
+                            <i class="fa fa-medal" style="font-size: 32px;"></i>
+                            <span style="border-bottom: 2px solid var(--theme-color);">OUR EXPERTISE</span>
+                            <i class="fa fa-medal" style="font-size: 32px;"></i>
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -515,8 +518,11 @@ About Area
                         Founded with a vision to transform ideas into enduring landmarks, we bring together
                         craftsmanship, innovation, and trust to deliver spaces that inspire.
                     </p>
-                    <p class="sec-text mb-20" style="color: rgba(255, 255, 255, 0.7);">Based in Goa, we undertake all
-                        types of construction projects — from luxury villas and residential complexes to commercial
+                    <p class="sec-text mb-20" style="color: rgba(255, 255, 255, 0.7);"><span
+                            style="color: var(--theme-color);">
+                            Based in Goa, we undertake all
+                            types of construction projects
+                        </span> — from luxury villas and residential complexes to commercial
                         spaces, renovations, and interiors. Our strength lies in blending modern technology with
                         time-tested building practices, ensuring every project is strong, sustainable, and uniquely
                         tailored to our client’s vision.
@@ -586,8 +592,11 @@ Property Area 4
                 <div class="col-md-12">
                     <div class="title-area text-center">
                         <span class="sub-title4">Our Projects</span>
-                        <h2 class="sec-title" style="color: black;"><i class="fa-solid fa-helmet-safety"></i> Our Latest
-                            Residential Projects
+                        <h2 class="sec-title" style="color: black;"><i class="fa-solid fa-helmet-safety"></i> <span
+                                style="border-bottom: 2px solid var(--theme-color);">
+                                Our Latest
+                                Residential Projects
+                            </span>
                             <i class="fa-solid fa-helmet-safety"></i>
                         </h2>
                     </div>
@@ -797,8 +806,9 @@ Property Area 2
                 <div class="col-12">
                     <div class="title-area text-center">
                         <span class="sub-title4">Our Services</span>
-                        <h2 class="sec-title" style="color: black;"><i class="fa-solid fa-thumbs-up"></i> We Provide
-                            Excellent Service <i class="fa-solid fa-thumbs-up"></i></h2>
+                        <h2 class="sec-title" style="color: black;"><i class="fa-solid fa-thumbs-up"></i> <span
+                                style="border-bottom: 2px solid var(--theme-color);">Our Services</span> <i
+                                class="fa-solid fa-thumbs-up"></i></h2>
                     </div>
                 </div>
                 <!-- <div class="col-auto">
@@ -1141,7 +1151,8 @@ Blog Area
                 <div class="col-12">
                     <div class="title-area text-center">
                         <span class="sub-title4">News & Blog</span>
-                        <h2 class="sec-title"><i class="fa-solid fa-newspaper"></i> Latest News & Article <i
+                        <h2 class="sec-title" style="color: black;"><i class="fa-solid fa-newspaper"></i> <span
+                                style="border-bottom: 2px solid var(--theme-color);">Latest Blogs</span> <i
                                 class="fa-solid fa-newspaper"></i></h2>
                     </div>
                 </div>
@@ -1318,7 +1329,7 @@ Blog Area
                                     <div class="about-logo">
                                         <a href="index.html"><img src="assets/img/logo.svg" alt="Builda"></a>
                                     </div>
-                                    <p class="about-text"> Rapidiously myocardinate cross-platform intellectual capital
+                                    <p class="about-text" style="color: var(--theme-color)"> Rapidiously myocardinate cross-platform intellectual capital
                                         model. Appropriately create interactive infrastructures</p>
                                     <div class="th-social style5">
                                         <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
@@ -1332,7 +1343,7 @@ Blog Area
                         </div>
                         <div class="col-md-6 col-xl-auto">
                             <div class="widget footer-widget">
-                                <h3 class="widget_title">Get In Touch</h3>
+                                <h3 class="widget_title" style="color: var(--theme-color)">Get In Touch</h3>
                                 <div class="th-widget-contact">
                                     <div class="info-box_text">
                                         <div class="icon"><img src="assets/img/icon/location-dot.svg" alt="img"></div>
@@ -1366,7 +1377,7 @@ Blog Area
                         </div>
                         <div class="col-md-6 col-xl-auto">
                             <div class="widget widget_nav_menu footer-widget">
-                                <h3 class="widget_title">Useful Link</h3>
+                                <h3 class="widget_title"  style="color: var(--theme-color)">Useful Link</h3>
                                 <div class="menu-all-pages-container">
                                     <ul class="menu">
                                         <li><a href="about.html">About us</a></li>
@@ -1380,7 +1391,7 @@ Blog Area
                         </div>
                         <div class="col-md-6 col-xl-auto">
                             <div class="widget widget_nav_menu footer-widget">
-                                <h3 class="widget_title">Explore</h3>
+                                <h3 class="widget_title" style="color: var(--theme-color)">Explore</h3>
                                 <div class="menu-all-pages-container">
                                     <ul class="menu">
                                         <li><a href="service.html">All Properties</a></li>
