--- a/index.html
+++ b/index.html
@@ -354,8 +354,10 @@ Hero Area
                 </div>
                 <div class="col-xl-7">
                     <div class="hero-style9">
-                        <span class="sub-title4">Turning Lands Into Landmarks</span>
-                        <h1 class="hero-title text-white">Mindscape Construction</h1>
+                        <!-- <span class="sub-title4">Turning Lands Into Landmarks</span> -->
+                        <h1 class="hero-title text-theme">Mindscape Construction</h1>
+                        <p style="color: white; font-size: 20px; font-weight: 600; text-transform: uppercase;">Turning
+                            Lands Into Landmarks</p>
                         <p class="hero-text">At Mindscape Constructions, we bring your vision to life with precision,
                             quality, and dedication. Based in Goa, we undertake all types of construction projects —
                             from luxury villas and residential complexes to commercial spaces and renovations. With a
@@ -513,32 +515,30 @@ About Area
                         <h2 class="sec-title"><i class="fa-solid fa-users"></i> About Us</h2>
                         <!-- <h2 class="sec-title">Building the Future of Residential Living</h2> -->
                     </div>
-                    <p class="sec-text mb-20" style="color: rgba(255, 255, 255, 0.7);">At Mindscape Constructions, we
+                    <p class="sec-text mb-20" style="color: var(--theme-color);">At Mindscape Constructions, we
                         believe that every project is more than just a structure — it’s a story waiting to be built.
                         Founded with a vision to transform ideas into enduring landmarks, we bring together
                         craftsmanship, innovation, and trust to deliver spaces that inspire.
                     </p>
-                    <p class="sec-text mb-20" style="color: rgba(255, 255, 255, 0.7);"><span
-                            style="color: var(--theme-color);">
+                    <p class="sec-text mb-20" style="color: var(--theme-color);">
                             Based in Goa, we undertake all
-                            types of construction projects
-                        </span> — from luxury villas and residential complexes to commercial
+                            types of construction projects from luxury villas and residential complexes to commercial
                         spaces, renovations, and interiors. Our strength lies in blending modern technology with
                         time-tested building practices, ensuring every project is strong, sustainable, and uniquely
                         tailored to our client’s vision.
                     </p>
-                    <p class="sec-text mb-20" style="color: rgba(255, 255, 255, 0.7);">What sets us apart is our
+                    <p class="sec-text mb-20" style="color: var(--theme-color);">What sets us apart is our
                         hands-on approach — we listen, we plan, and we execute with precision, keeping you informed
                         every step of the way. With a team of skilled architects, engineers, and craftsmen, we are
                         committed to delivering on time, within budget, and above expectations.
                     </p>
-                    <p class="sec-text mb-20" style="color: rgba(255, 255, 255, 0.7);">
+                    <p class="sec-text mb-20" style="color: var(--theme-color);">
                         At Mindscape Constructions, we don’t just build for today — we build for generations. Because
                         for us, it’s not just about construction, it’s about creating spaces that truly feel like home,
                         work, and legacy.
                     </p>
                     <!-- <h5 class="fw-medium mb-10" style="color: white;">Our Value</h5>
-                    <p class="sec-text mb-30" style="color: rgba(255, 255, 255, 0.7);">Working closely with our partners
+                    <p class="sec-text mb-30" style="color: var(--theme-color);">Working closely with our partners
                         and clients, we blend industry
                         expertise, innovative techniques, and a commitment to quality to deliver exceptional living
                         spaces.</p>
@@ -1329,7 +1329,8 @@ Blog Area
                                     <div class="about-logo">
                                         <a href="index.html"><img src="assets/img/logo.svg" alt="Builda"></a>
                                     </div>
-                                    <p class="about-text" style="color: var(--theme-color)"> Rapidiously myocardinate cross-platform intellectual capital
+                                    <p class="about-text" style="color: var(--theme-color)"> Rapidiously myocardinate
+                                        cross-platform intellectual capital
                                         model. Appropriately create interactive infrastructures</p>
                                     <div class="th-social style5">
                                         <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
@@ -1377,7 +1378,7 @@ Blog Area
                         </div>
                         <div class="col-md-6 col-xl-auto">
                             <div class="widget widget_nav_menu footer-widget">
-                                <h3 class="widget_title"  style="color: var(--theme-color)">Useful Link</h3>
+                                <h3 class="widget_title" style="color: var(--theme-color)">Useful Link</h3>
                                 <div class="menu-all-pages-container">
                                     <ul class="menu">
                                         <li><a href="about.html">About us</a></li>
